# ffmpeg_demo

./: CMakeLists.txt  README.md  cmake.sh  ffplay.c  main.cpp
demo_decode/: CMakeLists.txt  demo_decode.cpp  demo_decode.h  main.cpp
demo_decode/cppcommon/: CLog.c  CLog.h  CMakeLists.txt  CodecUtil.c  CodecUtil.h  Common.h
demo_simple/: CMakeLists.txt  main.cpp
ffmpeg_build/include/libavformat/: config.h
ffmpeg_build/lib/pkgconfig/: libavcodec.pc  libavdevice.pc  libpostproc.pc  libswresample.pc  sdl2.pc
ffmpeg_build/share/doc/ffmpeg/: ffplay-all.html  ffplay.html
ffmpeg_build/share/man/man1/: ffplay-all.1
